<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ShoeViewModel"
            type="com.example.shoestore.view.ShoeViewModel" />

    </data>

    <!--
         used constraintLayout here to make responsive design helping with intuit library
         & there are misaligned elements
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ShoeDetailsFragment"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:fontFamily="@font/oswald_medium"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/editText2" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_72sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/edit_text_shape"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:text="@={ShoeViewModel.shoeName}"
            android:textColor="@color/fontColor"
            android:hint="@string/football_stars"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:fontFamily="@font/oswald_medium"
            android:text="@string/company_name"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/editText3"
            app:layout_constraintStart_toStartOf="@+id/editText2" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/fontColor"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:text="@={ShoeViewModel.shoeCompany}"
            android:hint="@string/adidas"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_medium"
            android:text="@string/shoe_size_"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/editText4"
            app:layout_constraintStart_toStartOf="@+id/textView4" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:text="@={ShoeViewModel.shoeSize}"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/fontColor"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:inputType="numberDecimal"
            android:hint="@string/_42"
            android:textColorHint="@color/hintColor"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_medium"
            android:text="Description"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/editText5"
            app:layout_constraintStart_toStartOf="@+id/textView5" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:text="@={ShoeViewModel.shoeDescription}"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/fontColor"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:hint="@string/good_in_wet_playground"
            android:textColorHint="@color/hintColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/signup_shape"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@+id/editText5"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <Button
            android:id="@+id/save"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/cancel"
            app:layout_constraintEnd_toEndOf="@+id/editText5"
            app:layout_constraintTop_toTopOf="@+id/cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>