<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--
     used constraintLayout here to make responsive design helping with intuit library
     & there are misaligned elements
-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.LoginFragment">
        <!--
        separate views to make design petter using constraint layout
        -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.5"
            android:layout_marginBottom="@dimen/_32sdp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:elevation="@dimen/_8sdp"
                android:text="@string/enter_your_email"
                android:fontFamily="@font/oswald_medium"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintStart_toStartOf="@+id/editText" />
            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/edit_text_shape"
                android:textColor="@color/fontColor"
                android:hint="@string/shoestore_gmail_com"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:fontFamily="@font/oswald_medium"
                android:text="@string/enter_your_password"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="@+id/editText2" />
            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/pass"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:inputType="textPassword"
                android:textColor="@color/fontColor"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />
            <Button
                android:id="@+id/signIn"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/signUp" />
            <Button
                android:id="@+id/signUp"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/signup_shape"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_margin="@dimen/_24sdp"
                android:layout_height="@dimen/_150sdp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_shopping_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <ImageView
            android:id="@+id/imageView2"
            app:layout_constraintHeight_percent="0.20"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:scaleType="fitStart"
            android:src="@drawable/ic_path_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            app:layout_constraintHeight_percent="0.20"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_path_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>