<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Shoe"
            type="com.example.shoestore.model.ShoeModel" />

    </data>
    <!--
           used constraintLayout here to make responsive design helping with intuit library
           & there are misaligned elements
      -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="@dimen/_8sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_margin="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
           android:outlineSpotShadowColor="@color/blue"
            tools:targetApi="p">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="@dimen/_16sdp"
                    android:text="@{Shoe.name}"
                    android:textColor="@color/fontColor"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:text="@tools:sample/full_names[2]" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/shoe_name_card"
                    android:fontFamily="@font/oswald_medium"
                    android:textColor="@color/fontColor"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16sdp"
                    android:text="@{Shoe.description}"
                    android:textColor="@color/fontColor"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:text="@tools:sample/full_names" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:fontFamily="@font/oswald_medium"
                    android:textColor="@color/fontColor"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintStart_toStartOf="@+id/name"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@{Shoe.size}"
                    android:fontFamily="@font/oswald_medium"
                    android:textColor="@color/fontColor"
                    app:layout_constraintEnd_toEndOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:text="@tools:sample/us_zipcodes"/>


                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="company"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/oswald_medium"
                    android:textColor="@color/fontColor"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald_medium"
                    android:text="@{Shoe.company}"
                    android:textColor="@color/fontColor"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/des"
                    app:layout_constraintEnd_toEndOf="@+id/company"
                    app:layout_constraintStart_toStartOf="@+id/company"
                    app:layout_constraintTop_toBottomOf="@+id/company"
                    tools:text="@tools:sample/first_names" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/oswald_medium"
                    android:text="@string/shoe_size"
                    android:textColor="@color/fontColor"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>